# libnetvec

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-debug.sh
bench/: bench-hash.cpp  bench-map.cpp
libraries/libbench/: CMakeLists.txt  bench.h  random.h  types.h
libraries/libnet/: CMakeLists.txt  bloom-filter-util.h  bloom-filter.cpp  bloom-filter.h  cht.cpp  cht.h  cms-util.h  cms.cpp  cms.h  double-chain-impl.cpp  double-chain-impl.h  double-chain.cpp  double-chain.h  hash.h  map-impl-pow2.cpp  map-impl-pow2.h  map-util.h  map.cpp  map.h  time.h  vector.h
libraries/libnetburst/: CMakeLists.txt  mapvec.cpp  mapvec.h
libraries/libnetvec/: CMakeLists.txt  compute.h  mapvec.h  mapvec16.cpp  mapvec16.h  mapvec16v2.h  mapvec8.cpp  mapvec8.h
libraries/libutil/: hash.h  math.h  random.h  types.h  zmm.h
tests/: mapvec.cpp  test-mapvec.cpp  test-mapvec16.cpp  test-mapvec8.cpp  tests.h
tools/: bench-hash.cpp  bench-map.cpp  common.h  test-fxhash.cpp  test-mapvec16.cpp  test-mapvec8.cpp
