################################################################################
# bench library
################################################################################

file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

# add_library(bench SHARED ${SOURCES})
# set_target_properties(bench PROPERTIES POSITION_INDEPENDENT_CODE ON)

# target_compile_options(bench PRIVATE ${GLOBAL_COMPILATION_FLAGS})
